# ListaDellaSpesa

./: CMakeLists.txt  README.md
src/: CLI.cpp  CLI.h  CMakeLists.txt  ContatoreOggetti.cpp  ContatoreOggetti.h  GestoreListe.cpp  GestoreListe.h  ListaDellaSpesa.cpp  ListaDellaSpesa.h  Observer.h  Oggetto.cpp  Oggetto.h  Utente.cpp  Utente.h  main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
test/: CMakeLists.txt  test_contatore.cpp  test_gestore.cpp  test_listadellaspesa.cpp  test_observer.cpp  test_oggetto.cpp  test_utente.cpp
